--- a/instagram/insta/templates/insta/base.html
+++ b/instagram/insta/templates/insta/base.html
@@ -9,49 +9,16 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'insta/css/style.css' %}">
     <script src="https://kit.fontawesome.com/bd40ddfae2.js" crossorigin="anonymous"></script>
     <title>Instagram</title>
-    <style>
-        .instalogo{
-            width: 103px;
-            height: 29px;
-        }
-        .right .home, .dm{
-            width: 45px; 
-            height: 45px;
-        }
-        .nav_container{
-            display: flex;
-            justify-content: space-between;
-            margin: 5px 5px 5px 5px;
-            padding-right: 12rem;
-            padding-left: 12rem;
-            align-items: flex-end;
-            border-bottom: 0.7px solid #dbdbdb;
-        }
-        .compass{
-            width: 40px; 
-            height: 25px;
-        }
-        .heart{
-            width: 45px; 
-            height: 45px;
-        }
-        #search_input{
-            border: solid 1px #dbdbdb;
-            border-radius: 3px;
-        }
-        .main{
-            background-color: #fafafa;
-        }
-
-    </style>
+    
   </head>
   <body>
     <div class="nav_container">
         <div class="left">
             <a href="{% url 'main' %}">
-                <img class="instalogo" src="{% static 'app/img/insta_logo.png' %}">
+                <img class="instalogo" src="{% static 'insta/img/insta_logo.png' %}">
             </a>
         </div>
         <div class="search">
@@ -61,7 +28,7 @@
         </div>
         <div class="right">
             {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}"> sign out</a>
+                <a href="{% url 'logout' %}"> {{ user.username }} sign out</a>
             {% endif %}
             <a href="{% url 'main' %}">
                 <img class="home" src="{% static 'insta/img/insta_home.png' %}">
@@ -69,13 +36,13 @@
             <img class="dm" src="{% static 'insta/img/insta_dm.png' %}">
             <img class="compass" src="{% static 'insta/img/insta_compass.png' %}">
             <img class="heart" src="{% static 'insta/img/insta_heart.png' %}">
+            <a href="{% url 'mypage' %}"><img class="profile_image" src="{{ users.profile_image.url }}" alt="">a</a>
         </div>
     </div>
-
-    {% block header %}
-    
-    {% endblock %}
-
+    <div class="container">
+        {% block header %}
+        {% endblock %}
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
