--- a/instagram/insta/templates/insta/main.html
+++ b/instagram/insta/templates/insta/main.html
@@ -87,8 +87,10 @@
                 </div><br><br>
                 <div class="suggest">
                     소개·도움말·홍보 센터·API·채용 정보<br>
-                    개인정보처리방침약관·위치·인기 계정·해시태그·언어
-                </div>
+                    개인정보처리방침약관·위치·인기 계정·해시태그·언어<br><br>
+                    © 2020 INSTAGRAM FROM FACEBOOK
+                </div><br>
+                
             </div>
         </div>
     </div>
