--- a/instagram/insta/templates/insta/base.html
+++ b/instagram/insta/templates/insta/base.html
@@ -7,20 +7,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'insta/css/style.css' %}">
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script> 
+     -->
+    <link rel="stylesheet"  type="text/css" href="{% static 'insta/css/style.css' %}">
+    
     <script src="{% static 'insta/js/style.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script> 
     <script src="https://kit.fontawesome.com/bd40ddfae2.js" crossorigin="anonymous"></script>
     <title>Instagram</title>
+    <style>
+        a { text-decoration: none; color: black; }
+        a:visited { text-decoration: none; }
+        a:hover { text-decoration: none; }
+        a:focus { text-decoration: none; }
+        a:hover, a:active { text-decoration: none; }
+    </style>
     
   </head>
   <body>
     <div class="nav_container">
         <div class="left">
-            <a href="{% url 'main' %}">
+            <a href="{% url 'main' %}" style="text-decoration:none">
                 <img class="instalogo" src="{% static 'insta/img/insta_logo.png' %}">
             </a>
         </div>
@@ -31,20 +39,14 @@
         </div>
         <div class="right">
             {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}"> sign out</a>
+                <a href="{% url 'logout' %}" style="text-decoration:none"> sign out</a>
             {% endif %}
-            <a href="{% url 'main' %}">
+            <a href="{% url 'main' %}" style="text-decoration:none">
                 <img class="home" src="{% static 'insta/img/insta_home.png' %}">
             </a>
             <img class="dm" src="{% static 'insta/img/insta_dm.png' %}">
             <img class="compass" src="{% static 'insta/img/insta_compass.png' %}">
             <img class="heart" src="{% static 'insta/img/insta_heart.png' %}">
-            <a href="{% url 'mypage' %}"><img class="profile_image" src="{{ users.profile_image.url }}" alt="">a</a>
-            <button type="button" class="btn btn-default" title="{{ user.username }}" 
-                data-container="body" data-toggle="popover" data-placement="bottom" 
-                data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-		        {{ user.username }}
-	        </button>
         </div>
     </div>
     <div class="container">
