--- a/instagram/insta/templates/insta/signin.html
+++ b/instagram/insta/templates/insta/signin.html
@@ -1,13 +1,7 @@
-{% load static %}
+{% extends 'insta/base2.html' %}{% load static %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
-</head>
-<body>
+    <div class="signin">
     <div>
         <form method="POST" action="/signin">
             {% csrf_token %}
@@ -18,5 +12,6 @@
     <div class="signup">
         <a href="{% url 'signup' %}">가입하기</a>
     </div>
-</body>
-</html>
+    </div>
+
+{% endblock %}
