--- a/instagram/insta/templates/insta/hashtag.html
+++ b/instagram/insta/templates/insta/hashtag.html
@@ -9,69 +9,73 @@
 <div class="hashtag_post">
 {% for post in hashtag.post_set.all %}
 <div class="card">
-  <header>
-      <div class="info123">
-      <img src="" alt="">
-      <div class="username">{{ post.writer }}</div>
-      
-      <br>
-      </div>
-      <img class="dot3" src="{% static 'insta/img/dot3.png' %}">
-  </header>
-  <div class="card_image">
-      {% if post.image %}
-          <img src="{{ post.image.url }}" alt="">
-      {% endif %}
-  </div>
-  
-  <div class="function1">
-      <a href="{% url 'like' pk=post.pk %}">
-      {% if user in post.likes.all %}
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-          </svg>
-      {% else %}
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-          </svg>
-      {% endif %}
-      </a>&nbsp;
-      <span>
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
-          </svg>
-      </span>
-      <span>
-          <img class="dm" src="{% static 'insta/img/insta_dm.png' %}">
-      </span>
-  </div>
+    <header>
+        
+        <div class="username"><a href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
+            {{ post.writer }}
+        </a>
 
-  <p> {{ post.likes.count }}명이 좋아합니다 </p>
-  
-  <div class="info">
-      <div>
-      <span class="username">{{ post.writer }}</span> &nbsp; 
-      {{ post.content }}
-      </div>
-  </div><br>
-      <span>
-          {% for hashtag in post.hashtags.all %}
-            <a href="/hashtag/{{ hashtag.name }}"> #{{ hashtag.name }} </a>
-          {% endfor %}
-      </span>    <br>
-  
-  <div class="comment_form">
-      {% for comment in post.comments.all %}
-          <p> <span class="username">{{ comment.c_writer }}</span> &nbsp; {{ comment.text }}</p>
-      {% endfor %}
-  </div>
-  <div class="comment">
-      <form method="POST" action="/comment/{{ post.id }}">
-          {% csrf_token %}
-          {{ comment_form }}
-          <input type="submit" value="submit">
-      </form>
-  </div>
+        </div>
+        
+    </header>
+    <div class="card_image">
+        {% if post.image %}
+            <img src="{{ post.image.url }}" alt="">
+        {% endif %}
+    </div>
+    <div class="card-bottom">
+    <div class="function1">
+        <a href="{% url 'like' pk=post.pk %}">
+        {% if user in post.likes.all %}
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+            </svg>
+        {% else %}
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+            </svg>
+        {% endif %}
+        </a>&nbsp;
+        <span>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+            </svg>
+        </span>
+        <span>
+            <img class="dm" src="{% static 'insta/img/insta_dm.png' %}">
+        </span>
+    </div>
+
+    <p> {{ post.likes.count }}명이 좋아합니다 </p>
+    
+    <div class="info">
+        <div>
+        <a style="font-weight: bold;"href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
+            {{ post.writer }}
+        </a> &nbsp; 
+        {{ post.content }}
+        </div>
+    </div><br>
+        <span>
+            {% for hashtag in post.hashtags.all %}
+              <a class="hashtag" href="/hashtag/{{ hashtag.name }}" style="text-decoration:none"> 
+                #{{ hashtag.name }} </a>
+            {% endfor %}
+        </span>    <br>
+    
+    <div class="comment_form">
+        {% for comment in post.comments.all %}
+            <p> <span class="username">{{ comment.c_writer }}</span> &nbsp; {{ comment.text }}</p>
+        {% endfor %}
+    </div>
+    <div class="comment">
+        <form method="POST" action="/comment/{{ post.id }}">
+            {% csrf_token %}
+            {{ comment_form }}
+            <input type="submit" value="submit">
+        </form>
+    </div>
+</div>
 </div><br><br>
 {% endfor %}
 </div>
