--- a/instagram/insta/templates/insta/main.html
+++ b/instagram/insta/templates/insta/main.html
@@ -7,13 +7,26 @@
 {% for post in posts %}
         <div class="card">
             <header>
-                <div class="info123">
-                <img src="" alt="">
-                <div class="username"><a href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
+                
+                <span class="username">
+                <a href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
                     {{ post.writer }}
                 </a>
-                <img class="dot3" src="{% static 'insta/img/dot3.png' %}">
-                </div>
+                </span>
+                <span class="change">
+                <a href="{% url 'update' pk=post.pk %}">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z"/>
+                        <path fill-rule="evenodd" d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z"/>
+                    </svg>
+                </a> &nbsp;&nbsp;
+                <a href="{% url 'delete' pk=post.pk %}">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                    </svg>
+                </a>
+                </span>
                 
             </header>
             <div class="card_image">
@@ -21,7 +34,7 @@
                     <img src="{{ post.image.url }}" alt="">
                 {% endif %}
             </div>
-            
+            <div class="card-bottom">
             <div class="function1">
                 <a href="{% url 'like' pk=post.pk %}">
                 {% if user in post.likes.all %}
@@ -39,16 +52,20 @@
                         <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
                     </svg>
                 </span>
+                &nbsp;
                 <span>
-                    <img class="dm" src="{% static 'insta/img/insta_dm.png' %}">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-seam" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
+                      </svg>
                 </span>
+                
             </div>
 
             <p> {{ post.likes.count }}명이 좋아합니다 </p>
             
             <div class="info">
                 <div>
-                <a href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
+                <a style="font-weight: bold;"href="{% url 'mypage' pk=post.writer %}" style="text-decoration:none">
                     {{ post.writer }}
                 </a> &nbsp; 
                 {{ post.content }}
@@ -73,8 +90,10 @@
                     <input type="submit" value="submit">
                 </form>
             </div>
-        </div><br>
+        </div>
+        </div><br><br>
         {% endfor %}
+    </div>
     </div>
 
     <div class="main_right">
@@ -82,11 +101,9 @@
             <div id="fixed_nav">
                 <!-- <button href="{#% url 'new' %}">글쓰기</button> -->
                 <header>
-                    <img src="{% static 'insta/img/apple.jpg' %}" alt="profile">
-                    
-                        {{ user.username }}
-                        {{ users.nickname }}
-                    
+                    <div class="profile">
+                    <h2>{{ user.username }}</h2>
+                    </div>
                 </header><br>
                 <div class="story">
                     <h6>회원님을 위해 추천하지 않음</h6>
