--- a/instagram/insta/templates/insta/signup.html
+++ b/instagram/insta/templates/insta/signup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet"  type="text/css" href="{% static 'insta/css/signup.css' %}">
+    <link rel="shortcut icon" href="{% static 'insta/favicon/favicon.ico' %}"/>
 </head>
 <body>
 <div class="mainpage">
