--- a/instagram/insta/templates/insta/signup.html
+++ b/instagram/insta/templates/insta/signup.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div class="gotosignup">
-            계정이 있으신가요? <a href="{% url 'signup' %}">로그인</a>
+            계정이 있으신가요? <a href="{% url 'signin' %}">로그인</a>
         </div>
             
     </div>
