--- a/instagram/insta/templates/insta/create.html
+++ b/instagram/insta/templates/insta/create.html
@@ -1,12 +1,14 @@
 {% extends 'insta/base.html' %}
 {% load static %}
 {% block header %}
+<div class="createForm">
+  <img class="instalogo" src="{% static 'insta/img/insta_logo.png' %}">
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <table>
+        <table class="createtable"> 
           {{ form.as_table }}
         </table>
-        <input type="submit" value="submit">
+        <input class="createButton" type="submit" value="공유">
     </form>
+</div>
 {% endblock %}
-
