--- a/instagram/insta/templates/insta/main.html
+++ b/instagram/insta/templates/insta/main.html
@@ -13,6 +13,16 @@
                     {{ post.writer }}
                 </a>
                 </span>
+
+                <span class="place">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+                        <circle cx="8" cy="4.5" r="1"/>
+                    </svg>
+                    {{ post.place }}
+                </span>
+
                 <span class="change">
                 <a href="{% url 'update' pk=post.pk %}">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -76,7 +86,7 @@
                       <a class="hashtag" href="/hashtag/{{ hashtag.name }}" style="text-decoration:none"> 
                         #{{ hashtag.name }} </a>
                     {% endfor %}
-                </span>    <br>
+                </span>    <br><br>
             
             <div class="comment_form">
                 {% for comment in post.comments.all %}
